[package]
  name = "wemo"
  version = "0.1.1"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "A library for interacting with Belkin WeMo home automation devices."
  keywords = [ "WeMo", "Belkin", "home", "automation", "UPNP" ]
  categories = [ "api-bindings" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/wemo.rs"
  documentation = "https://docs.rs/wemo"

[lib]
  name = "wemo"
  path = "src/lib.rs"

[dependencies]
  get_if_addrs = { version = "0.5", optional = true } # TODO: Remove. GPL is too strict.
  iron = { version = "0.6", optional = true }
  lazy_static = "1.4"
  log = "0.4"
  mio = "0.8"
  persistent = { version = "0.4", optional = true }
  regex = "1.9"
  time = "0.3"
  url = "2.4"
  urlencoded = { version = "0.6", optional = true }

[features]
  # Optionally support subscribing to devices.
  default = ["subscriptions"]
  subscriptions = ["get_if_addrs", "iron", "persistent", "urlencoded"]
